<resources>
    <string name="app_name">RishabhToys</string>
    <string name="rishabh_toys">RISHABH TOYS</string>
    <string name="rishabh_toys_address">Shop No. 2895/3, IIIrd floor, Janta Market, Sadar Bazar, Delhi-110006</string>
    <string name="rishabh_toys_gst">GST No: 07ACHPJ9322R1ZZ</string>
    <string name="rishabh_toys_email">Email: djain986867@gmail.com</string>
    <string name="rishabh_toys_contact">Mob No: +91&#8211;9868676991 | +91&#8211;7827820919</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="organisation_name">Organisation Name:</string>
    <string name="detailed_info">Detailed Info</string>
    <string name="edit">EDIT</string>
    <string name="address">Address:</string>
    <string name="inr">INR:</string>
    <string name="primary_contact_no">Primary Contact No:</string>
    <string name="alternate_contact_no">Alternate Contact No:</string>
    <string name="owner_s_name">Owner\'s Name:</string>
    <string name="gst">GST No:</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_business_entity">Add Business Entity</string>
    <string name="update_business_entity">Update Business Entity</string>
    <string name="company_s_name">Company\'s Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="daily_logs">Daily Logs</string>
    <string name="add_item">Add Item</string>
    <string name="rate_list">Rate List</string>
    <string name="type_business_organisation_name">Type organisation name</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="opening_date">Account Opening Date</string>
    <string name="create_account">Create Account</string>
    <string name="update_account">Update Account</string>
    <string name="APP_KEY">wkohl3s6028f53t</string>
    <string name="company_pdf_label">Company</string>
    <string name="address_pdf_label">Address</string>
    <string name="gst_pdf_label">GST No</string>
    <string name="contact_pdf_label">Contact No</string>
    <string name="date_pdf_label">Txn Date</string>
    <string name="amount_pdf_label">Txn Amount</string>
    <string name="balance_pdf_label">Balance</string>

</resources>
