<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailEntityActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            app:contentScrim="?attr/colorPrimary"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/d_e_header_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/background"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/d_e_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/d_e_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/detailed_info"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/d_e_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="22dp"
                    android:paddingBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/edit"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/d_e_header"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/d_e_company_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:text="@string/organisation_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_header" />

                <TextView
                    android:id="@+id/d_e_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:textSize="18sp"
                    android:textColor="@color/night"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/d_e_company_name_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_header" />

                <ImageView
                    android:id="@+id/d_e_rate_list_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_header"
                    android:src="@drawable/ic_rate_list_48"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/d_e_company_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/address"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_company_name" />

                <TextView
                    android:id="@+id/d_e_company_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/night"
                    app:layout_constraintStart_toEndOf="@+id/d_e_company_address_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_company_name" />

                <TextView
                    android:id="@+id/d_e_gst_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/gst"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_company_address" />

                <TextView
                    android:id="@+id/d_e_gst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/night"
                    app:layout_constraintStart_toEndOf="@+id/d_e_gst_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_company_address" />

                <TextView
                    android:id="@+id/d_e_entity_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:text="EntityType: "
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_gst" />

                <TextView
                    android:id="@+id/d_e_entity_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/night"
                    app:layout_constraintStart_toEndOf="@+id/d_e_entity_type_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_gst" />


                <TextView
                    android:id="@+id/d_e_entity_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="6dp"
                    android:text="Rating: "
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_entity_type" />

                <RatingBar
                    android:id="@+id/d_e_rating"
                    android:layout_width="wrap_content"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:rating="4"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toEndOf="@+id/d_e_entity_rating_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_entity_type"
                    android:layout_height="40dp"/>

                <TextView
                    android:id="@+id/d_e_owner_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/owner_s_name"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_entity_rating_label" />

                <TextView
                    android:id="@+id/d_e_company_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:textSize="18sp"
                    android:textColor="@color/night"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/d_e_owner_name_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_entity_rating_label" />

                <TextView
                    android:id="@+id/d_e_primary_no_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:text="@string/primary_contact_no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_company_owner" />

                <TextView
                    android:id="@+id/d_e_primary_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/night"
                    app:layout_constraintStart_toEndOf="@+id/d_e_primary_no_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_company_owner" />

                <TextView
                    android:id="@+id/d_e_alt_no_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:text="@string/alternate_contact_no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_primary_no" />

                <TextView
                    android:id="@+id/d_e_alt_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/night"
                    app:layout_constraintStart_toEndOf="@+id/d_e_alt_no_label"
                    app:layout_constraintTop_toBottomOf="@+id/d_e_primary_no" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/backgroundGrey"
            app:layout_constraintTop_toBottomOf="@+id/d_e_header_content"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/background_txn_history"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/platinum"
                app:layout_constraintBottom_toBottomOf="@+id/d_e_txn_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/d_e_txn_history"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/d_e_txn_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/transaction_history"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/d_e_txn_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Date"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/d_e_txn_amount_label"
                app:layout_constraintTop_toBottomOf="@+id/d_e_txn_history" />

            <TextView
                android:id="@+id/d_e_txn_amount_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                app:layout_constraintLeft_toRightOf="@+id/d_e_txn_date_label"
                app:layout_constraintRight_toLeftOf="@+id/d_e_txn_balance_label"
                app:layout_constraintTop_toBottomOf="@+id/d_e_txn_history"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/d_e_txn_balance_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Balance"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/d_e_txn_date_label"
                app:layout_constraintStart_toEndOf="@+id/d_e_txn_amount_label"
                app:layout_constraintTop_toBottomOf="@+id/d_e_txn_history" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/txn_history_rv"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"/>






</androidx.coordinatorlayout.widget.CoordinatorLayout>